hphp/hack/test/typecheck/reactive/rx_superglobals10.php
<?hh // partial

<<__Rx>>
function f($x) {
  $a = $GLOBALS['_SERVER'];
}
